refactor(Dockerfile): simplify java entrypoint by removing jvm flags